adding several changes for document processing for KYB use case
